WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69686
margin-right is ignored with vertical writing mode
https://bugs.webkit.org/show_bug.cgi?id=69686
Summary
margin-right is ignored with vertical writing mode
Ojan Vafai
Reported
2011-10-07 19:27:05 PDT
Created
attachment 110242
[details]
test case summary: margin-right is ignored with vertical writing mode See test case.
Attachments
test case
(797 bytes, text/html)
2011-10-07 19:27 PDT
,
Ojan Vafai
no flags
Details
Patch
(8.22 KB, patch)
2011-10-07 20:21 PDT
,
Ojan Vafai
no flags
Details
Formatted Diff
Diff
Patch
(5.47 KB, patch)
2011-10-10 14:53 PDT
,
Ojan Vafai
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ojan Vafai
Comment 1
2011-10-07 20:21:20 PDT
Created
attachment 110247
[details]
Patch
Ojan Vafai
Comment 2
2011-10-07 20:21:56 PDT
Passes all the fast/writing-mode tests. Will put r? once I've verified it passes all the tests.
Dave Hyatt
Comment 3
2011-10-08 08:56:40 PDT
You don't need the RenderBlock helpers. RenderStyle has helpers already for this.
Dave Hyatt
Comment 4
2011-10-08 09:14:58 PDT
RenderStyle has Length marginStartUsing(const RenderStyle* otherStyle) const; Length marginEndUsing(const RenderStyle* otherStyle) const; Pass in the RenderBlock's style instead of the child's style, and it will give you the right answer. This will make the patch much smaller/simpler.
Ojan Vafai
Comment 5
2011-10-10 14:50:59 PDT
(In reply to
comment #4
)
> RenderStyle has > > Length marginStartUsing(const RenderStyle* otherStyle) const; > Length marginEndUsing(const RenderStyle* otherStyle) const; > > Pass in the RenderBlock's style instead of the child's style, and it will give you the right answer. This will make the patch much smaller/simpler.
ooh. that's much nicer.
Ojan Vafai
Comment 6
2011-10-10 14:53:58 PDT
Created
attachment 110408
[details]
Patch
WebKit Review Bot
Comment 7
2011-10-11 20:27:00 PDT
Comment on
attachment 110408
[details]
Patch Clearing flags on attachment: 110408 Committed
r97222
: <
http://trac.webkit.org/changeset/97222
>
WebKit Review Bot
Comment 8
2011-10-11 20:27:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug