margin-right is ignored with vertical writing mode https://bugs.webkit.org/show_bug.cgi?id=69686

Reviewed by Darin Adler.

Source/WebCore:

We need to use the parent's writing mode when grabbing
the margin start/end for the purposes of computing the parent's
preferred widths.

Test: fast/writing-mode/margins.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computeBlockPreferredLogicalWidths):
* rendering/RenderBlock.h:

LayoutTests:

* fast/writing-mode/margins-expected.txt: Added.
* fast/writing-mode/margins.html: Added.


Canonical link: https://commits.webkit.org/85954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97222 268f45cc-cd09-0410-ab3c-d52691b4dbfc